// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render FilmCard correctly Render empty data like obj 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onClick={[Function]}
  >
    <img
      alt=""
      height="175"
      src=""
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
    >
      
    </a>
  </h3>
</article>
`;

exports[`Render FilmCard correctly Render mock data the right way 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onClick={[Function]}
  >
    <img
      alt="The corn"
      height="175"
      src="img/the corn.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
    >
      The corn
    </a>
  </h3>
</article>
`;
